// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIDateTimePicker can show an error 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="snap-ui-renderer__date-time-picker snap-ui-renderer__field"
        >
          <label
            class="mm-box mm-text mm-label mm-label--html-for mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
            for="date-time-picker"
          >
            Select date and time
          </label>
          <div
            aria-readonly="true"
            class="snap-ui-renderer__date-time-picker--datetime"
            role="textbox"
            style="width: 100%; font-family: var(--font-family-default); max-height: 58px; min-height: 48px; display: inline-flex; align-items: center; border-radius: 8px; padding: 0px 16px; cursor: pointer; box-sizing: border-box; opacity: 1;"
            tabindex="0"
          >
            Select a date and time
          </div>
          <p
            class="mm-box mm-text mm-help-text mm-text--body-sm mm-box--margin-top-1 mm-box--color-error-default"
          >
            This is an error
          </p>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIDateTimePicker renders a date picker 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="snap-ui-renderer__date-time-picker"
        >
          <div
            aria-readonly="true"
            class="snap-ui-renderer__date-time-picker--date"
            role="textbox"
            style="width: 100%; font-family: var(--font-family-default); max-height: 58px; min-height: 48px; display: inline-flex; align-items: center; border-radius: 8px; padding: 0px 16px; cursor: pointer; box-sizing: border-box; opacity: 1;"
            tabindex="0"
          >
            Select a date
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIDateTimePicker renders a date time picker 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="snap-ui-renderer__date-time-picker"
        >
          <div
            aria-readonly="true"
            class="snap-ui-renderer__date-time-picker--datetime"
            role="textbox"
            style="width: 100%; font-family: var(--font-family-default); max-height: 58px; min-height: 48px; display: inline-flex; align-items: center; border-radius: 8px; padding: 0px 16px; cursor: pointer; box-sizing: border-box; opacity: 1;"
            tabindex="0"
          >
            Select a date and time
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIDateTimePicker renders a time picker 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="snap-ui-renderer__date-time-picker"
        >
          <div
            aria-readonly="true"
            class="snap-ui-renderer__date-time-picker--time"
            role="textbox"
            style="width: 100%; font-family: var(--font-family-default); max-height: 58px; min-height: 48px; display: inline-flex; align-items: center; border-radius: 8px; padding: 0px 16px; cursor: pointer; box-sizing: border-box; opacity: 1;"
            tabindex="0"
          >
            Select a time
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIDateTimePicker renders inside a field 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="snap-ui-renderer__date-time-picker snap-ui-renderer__field"
        >
          <label
            class="mm-box mm-text mm-label mm-label--html-for mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
            for="date-time-picker"
          >
            Select date and time
          </label>
          <div
            aria-readonly="true"
            class="snap-ui-renderer__date-time-picker--datetime"
            role="textbox"
            style="width: 100%; font-family: var(--font-family-default); max-height: 58px; min-height: 48px; display: inline-flex; align-items: center; border-radius: 8px; padding: 0px 16px; cursor: pointer; box-sizing: border-box; opacity: 1;"
            tabindex="0"
          >
            Select a date and time
          </div>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;
